--- a/main.html
+++ b/main.html
@@ -11,9 +11,10 @@
 	<div class="main">
 
 		<div class="ryu">
-			<div class="ryu-still"></div>
-  			<div class="ryu-ready"></div>
-  			<div class="ryu-throwing"></div>
+			<div class="ryu-still ryu-action"></div>
+  			<div class="ryu-ready ryu-action"></div>
+  			<div class="ryu-throwing ryu-action"></div>
+  			<div class="ryu-cool ryu-action"></div>
 		</div>
 
 		<div class="hadouken">
@@ -21,6 +22,8 @@
 		</div>
 
 	</div>
+
+	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 	
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
